--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 
 *{
 	box-sizing: border-box;
+	font-family: sans-serif;
 }
 a{
 	text-decoration: none;
@@ -83,6 +84,42 @@ a{
 	z-index: -1
 }
 
+.entrada h1{
+	position: absolute;
+	top: 250px;
+	z-index: 2;
+	color: #050505;
+	font-family: sans-serif;
+	left: 12.5em;
+	font-size: 50px;
+
+}
+
+
+.entrada h1:hover{
+	  color: #fff;
+	text-shadow: 0 0 10px #0a0a0a,
+				 0 0 20px #0a0a0a, 
+				 0 0 40px #0a0a0a;
+}
+.entrada h1 span{
+	transition: all 1s ease;
+}
+
+.entrada h1:hover span{
+	margin-left: -30px;
+}
+
+.entrada p{
+	position: absolute;
+	top: 350px;
+	z-index: 2;
+	color: #050505;
+	font-family: sans-serif;
+	left: 12.5em;
+
+}
+
 .entrada img{
 	object-fit: cover;
 	position: fixed;
@@ -94,3 +131,14 @@ a{
 	position: absolute;
 	top: 600px;
 }
+
+.Animes{
+	width: 100%;
+	display: flex;
+	height: 500px;
+	background-color: #0a0a0a;
+	position: absolute;
+	top: 900px;
+	left: 0;
+}
+
