--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ a{
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: -1
+	z-index: -1;
 }
 
 .entrada h1{
@@ -110,15 +110,65 @@ a{
 	margin-left: -30px;
 }
 
-.entrada p{
+.entrada h2{
 	position: absolute;
 	top: 350px;
 	z-index: 2;
-	color: #050505;
+	color: #0a0a0a;
 	font-family: sans-serif;
 	left: 12.5em;
-
+	animation: text-shadow 8.5s ease-in-out 2;
+	font-size: 2em;
+	font-weight: 900;
+	line-height: 1;
 }
+@keyframes text-shadow {
+    0% {  
+        transform: translateY(0);
+        text-shadow: 
+            0 0 0 #0c2ffb, 
+            0 0 0 #2cfcfd, 
+            0 0 0 #fb203b, 
+            0 0 0 #fefc4b;
+    }
+
+    20% {  
+        transform: translateY(-1em);
+        text-shadow: 
+            0 0.125em 0 #0c2ffb, 
+            0 0.25em 0 #2cfcfd, 
+            0 -0.125em 0 #fb203b, 
+            0 -0.25em 0 #fefc4b;
+    }
+
+    40% {  
+        transform: translateY(0.5em);
+        text-shadow: 
+            0 -0.0625em 0 #0c2ffb, 
+            0 -0.125em 0 #2cfcfd, 
+            0 0.0625em 0 #fb203b, 
+            0 0.125em 0 #fefc4b;
+    }
+    
+   60% {
+        transform: translateY(-0.25em);
+        text-shadow: 
+            0 0.03125em 0 #0c2ffb, 
+            0 0.0625em 0 #2cfcfd, 
+            0 -0.03125em 0 #fb203b, 
+            0 -0.0625em 0 #fefc4b;
+    }
+
+    80% {  
+        transform: translateY(0);
+        text-shadow: 
+            0 0 0 #0c2ffb, 
+            0 0 0 #2cfcfd, 
+            0 0 0 #fb203b, 
+            0 0 0 #fefc4b;
+    }
+}
+
 
 .entrada img{
 	object-fit: cover;
@@ -135,10 +185,35 @@ a{
 .Animes{
 	width: 100%;
 	display: flex;
-	height: 500px;
+	height: 1500px;
 	background-color: #0a0a0a;
 	position: absolute;
 	top: 900px;
 	left: 0;
 }
 
+.Animes h1{
+	color: #fff;
+	position: absolute;
+	top: 3em;
+	left: 25em;
+}
+
+.animes img{
+	object-fit: scale-down;
+	width: 200px;
+}
+
+.animes div{
+	width: 200px;
+	height: 300px;
+}
+.animes{
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	margin-top: 15em;
+	margin-left: 50px;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
