--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,6 @@ a{
 
 .Animes{
 	width: 100%;
-	display: flex;
 	height: 1500px;
 	background-color: #0a0a0a;
 	position: absolute;
@@ -202,18 +201,42 @@ a{
 .animes img{
 	object-fit: scale-down;
 	width: 200px;
+	cursor: pointer;
+	
 }
+
+.animes div:hover{
+	transform: scale(.8);
+}
+.animes p{
+	display: block;
+	color: #FFE6E6;
+	font-size: 15px;
+	transition: all .25s ease;
+	opacity: 0;
+	margin: auto;
+	padding: 0 10px 15px 30px;
+}
+
+.animes div:hover p{
+	opacity: 1;
+}
+
 
 .animes div{
 	width: 200px;
 	height: 300px;
+	transition: all .25s ease-in-out;
 }
 .animes{
-	width: 100%;
-	display: flex;
-	justify-content: space-around;
-	margin-top: 15em;
-	margin-left: 50px;
-	flex-direction: row;
-	flex-wrap: wrap;
+	width: 80%;
+	margin-top: 15rem;
+	margin-left: 10rem;
+
+	display: grid;
+	grid-template-columns: 350px 350px 350px 350px;
+	grid-template-rows: 300px 300px;
+
+	grid-gap: 1.2rem;
 }
+
