--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ a{
 	top: 0;
 	left: 0;
 	color: #fff;
+	z-index: 3
 }
 
 .logoImg{
@@ -184,7 +185,7 @@ a{
 
 .Animes{
 	width: 100%;
-	height: 1500px;
+	height: 1800px;
 	background-color: #0a0a0a;
 	position: absolute;
 	top: 900px;
@@ -202,7 +203,7 @@ a{
 	object-fit: scale-down;
 	width: 200px;
 	cursor: pointer;
-	
+	border-radius: 5px;
 }
 
 .animes div:hover{
@@ -234,9 +235,9 @@ a{
 	margin-left: 10rem;
 
 	display: grid;
-	grid-template-columns: 350px 350px 350px 350px;
+	grid-template-columns: 250px 250px 250px 250px 250px;
 	grid-template-rows: 300px 300px;
 
-	grid-gap: 1.2rem;
+	grid-gap: 1.5rem;
 }
 
