--- a/css/plantillaAnimes.css
+++ b/css/plantillaAnimes.css
@@ -5,13 +5,15 @@
 }
 a{
 	text-decoration: none;
-	color: #fff;
 }
 
+li{
+	list-style: none;
+}
 
 .container{
 	width: 100%;
-	height: 1000px;
+	height: 731px;
 	background-color: #0a0a0a;
 	position: absolute;
 	top: 60px;
@@ -21,6 +23,8 @@ a{
 }
 
 .sinopsis{
+	display: flex;
+	flex-direction: column;
 	width: 500px;
 	position: absolute;
 	top: 50px;
@@ -28,8 +32,34 @@ a{
 }
 
 .img{
+	display: flex;
+	flex-direction: column;
 	position: absolute;
 	top: 30px;
 	left: 70%;
 
+}
+
+.capi{
+	display: flex;
+	position: absolute;
+	flex-direction: column;
+	width: 400px;
+	margin-top: 2.5rem;
+	max-height: 400px;
+	overflow-x: auto;
+}
+.caps ul li{
+	padding: 15px;
+	border-bottom: solid;
+}
+.caps ul li:hover{
+	background-color: #252525;
+}
+.caps ul li a::before{
+	font-family: sans-serif;
+}
+.caps h2{
+	position: absolute;
+	left: 100px;
 }
